package com.teetime.domain;

public enum RideStatus {
    PENDING,
    CONFIRMED,
    COMPLETED,
    CANCELLED
}

